Use mutex for threads synchronization with shared connection.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@780 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -552,6 +552,8 @@ public class SqlParser</replacevalue>
 			<attribute name="name" />
 			<sequential>
 				<junit>
+					<jvmarg value="-ea" />
+					<jvmarg value="-server" />
 					<sysproperty key="SQLJET_TESTS_LOGGING" value="@{logging}" />
 					<classpath path="sqljet/bin" />
 					<classpath path="sqljet-test/bin" />
