--- a/build.xml
+++ b/build.xml
@@ -135,15 +135,40 @@ public class SqlParser</replacevalue>
 		</genkey>
 	</target>
 
-	<target name="javadoc" description="Build the javadocs for the source code.">
-		<javadoc destdir="build/javadocs" packagenames="org.tmatesoft.sqljet" sourcepath="sqljet/src">
-			<fileset dir="sqljet/src">
-				<include name="**/*.java" />
-			</fileset>
+	<target name="javadoc">
+		<mkdir dir="build" />
+		<mkdir dir="build/javadoc" />
+
+		<path id="doc.classpath">
+			<pathelement path="lib/antlr-runtime-3.1.3.jar" />
+		</path>
+
+		<javadoc destdir="build/javadoc" packagenames="org.tmatesoft.sqljet" sourcepath="sqljet/src" classpathref="doc.classpath" failonerror="false">
+			
+			<packageset dir="sqljet/src" defaultexcludes="yes">
+				<exclude name="**/tests/**" />
+				<exclude name="**/internal/**" />
+				<include name="**/core/**" />
+			</packageset>
+
+			<header>
+				<![CDATA[<a target="_top" href="http://sqljet.com/">SQLJet&nbsp;Home<a/>]]></header>
+			<bottom>
+				<![CDATA[Copyright &#169; 2008-2009 TMate Software Ltd. All Rights Reserved.]]>
+			</bottom>
+
 		</javadoc>
+
+		<zip destfile="build/sqljet.${build.number}.doc.zip">
+			<zipfileset dir="build/javadoc" prefix="javadoc">
+				<exclude name="**/.*" />
+				<exclude name=".*" />
+			</zipfileset>
+		</zip>
+
 	</target>
 
-	<target name="deploy" depends="clean, compile, compile-examples, generate-key">
+	<target name="deploy" depends="clean, compile, compile-examples, generate-key, javadoc">
 		<mkdir dir="build" />
 		<!-- update svnkit.build.properties here -->
 		<antcall target="init-build.number" />
@@ -228,25 +253,10 @@ public class SqlParser</replacevalue>
 			</zipfileset>
 		</zip>
 
-		<javadoc destdir="build/javadocs" packagenames="org.tmatesoft.sqljet" sourcepath="sqljet/src">
-			<fileset dir="sqljet/src">
-				<include name="**/*.java" />
-				<exclude name="**/internal/**" />
-			</fileset>
-		</javadoc>
-
-		<zip destfile="build/sqljet.${build.number}.doc.zip">
-			<zipfileset dir="build/javadocs" prefix="javadocs">
-				<exclude name="**/.*" />
-				<exclude name=".*" />
-			</zipfileset>
-		</zip>
-
 		<zip destfile="build/sqljet.${build.number}.zip">
 			<zipfileset dir="build" prefix="sqljet.${build.number}">
 				<include name="sqljet.${build.number}.jar" />
 				<include name="sqljet.${build.number}.src.zip" />
-				<include name="sqljet.${build.number}.doc.zip" />
 				<include name="sqljet-browser.${build.number}.jar" />
 				<include name="sqljet-browser.${build.number}.src.zip" />
 			</zipfileset>
@@ -277,13 +287,6 @@ public class SqlParser</replacevalue>
 		<delete dir="build/lib" includeemptydirs="true">
 			<include name="**/**" />
 		</delete>
-		<delete file="build/sqljet.${build.number}.doc.zip">
-		</delete>
-		<!--
-		<delete dir="build/javadocs" includeemptydirs="true">
-			<include name="**/**" />
-		</delete>
-		-->
 	</target>
 
 	<target name="deploy-maven" depends="clean,compile">
