build.xml: class files should be excluded from the source tarball (fix).
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@875 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -205,14 +205,15 @@ public class SqlParser</replacevalue>
 		<tar destfile="build/sqljet.${build.number}.tar.gz" compression="gzip">
 			<fileset dir="" >
     			<include name="**/**"/>
-    			<exclude name="build"/>
-    			<exclude name="sqljet/bin"/>
-				<exclude name="sqljet-test/bin"/>
 				
-				<exclude name="sqljet-examples/simple/bin"/>
-				<exclude name="sqljet-examples/browser/bin"/>
-				<exclude name="sqljet-examples/inventory/bin"/>
-				<exclude name="sqljet-examples/expenses/bin"/>
+    			<exclude name="build/**"/>
+    			<exclude name="sqljet/bin/**"/>
+				<exclude name="sqljet-test/bin/**"/>
+				
+				<exclude name="sqljet-examples/simple/bin/**"/>
+				<exclude name="sqljet-examples/browser/bin/**"/>
+				<exclude name="sqljet-examples/inventory/bin/**"/>
+				<exclude name="sqljet-examples/expenses/bin/**"/>
 			</fileset>
 		</tar>
 	</target>
