Minor code clean up: got rid of compilation warnings, unused imports and unreachable code.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@976 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@
 public class SqlLexer</replacevalue>
 		</replace>
 		<replace file="sqljet/src/org/tmatesoft/sqljet/core/internal/lang/SqlParser.java" token="public class SqlParser">
-			<replacevalue>@SuppressWarnings({"unused", "unchecked"})
+			<replacevalue>@SuppressWarnings({"unused", "unchecked", "rawtypes"})
 public class SqlParser</replacevalue>
 		</replace>
 
