Project pom.xml extended to include all dependencies and to call antlr generator at compile phase.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1011 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/build.xml
+++ b/build.xml
@@ -63,7 +63,7 @@
 			<arg value="-report" />
 			<arg value="-fo" />
 			<arg value="sqljet/src/org/tmatesoft/sqljet/core/internal/lang" />
-			<arg value="sqljet/src/Sql.g" />
+			<arg value="sqljet/src/org/tmatesoft/sqljet/core/internal/lang/Sql.g" />
 			<classpath>
 				<pathelement location="tools/antlr-${antlr.version}.jar" />
 				<pathelement path="${java.class.path}" />
