--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project>
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0" 
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"           
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+  http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>org.tmatesoft.sqljet</groupId>
@@ -15,26 +19,71 @@
       <url>http://sqljet.com/</url>
     </license>
   </licenses>
+
+  <!-- move to parent pom -->
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
   
   <profiles>
+  <!-- 
+  
+  profiles needed:
+  
+  jdk15, jdk16 (which jdk to run test with)
+  tests        (normal test suite)
+  stress-tests (another test suite)
+  benchmarks   (ant call)
+  
+   -->
     <profile>
       <id>jdk15</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-        <jdk>1.5</jdk>
-      </activation>
-      <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      </properties>
+      <activation><activeByDefault>true</activeByDefault></activation>
+      <build>
+      <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+          <compilerVersion>1.5</compilerVersion>
+          <fork>true</fork>
+          <executable>${JAVA_15_HOME}/bin/javac</executable>
+        </configuration>
+      </plugin>
+      </plugins>
+      </build>      
     </profile>
-  </profiles>
-  
-  <build>
-  
-    <sourceDirectory>sqljet/src</sourceDirectory>
-    <testSourceDirectory>sqljet-test/src</testSourceDirectory>
-    <plugins>
-    
+
+    <profile>
+      <id>jdk16</id>
+      <activation><activeByDefault>false</activeByDefault></activation>
+      <build>
+      <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <compilerVersion>1.6</compilerVersion>
+          <fork>true</fork>
+          <executable>${JAVA_16_HOME}/bin/javac</executable>
+        </configuration>
+      </plugin>
+      </plugins>
+      </build>      
+    </profile>
+
+    <profile>
+      <id>sqljet.tests</id>
+      <activation><activeByDefault>true</activeByDefault></activation>
+      <build>
+      <plugins>
       <plugin>
       <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
@@ -57,6 +106,79 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+      </plugins>
+      </build>      
+    </profile>
+    
+    <profile>
+      <id>sqljet.stress-tests</id>
+      <build>
+      <plugins>
+      <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.8</version>
+        <configuration>
+          
+          <excludes>
+            <exclude>**/*Abstract*.java</exclude>
+            <exclude>**/*Abstract*.java</exclude>
+            <exclude>**/*Mock*.java</exclude>
+            <exclude>**/*sandbox*/**/**.*</exclude>
+          </excludes>
+          <includes>
+            <includes>**/*Stress*.java</includes>
+          </includes>
+          <systemPropertyVariables>
+            <SQLJET_TESTS_LOGGING>false</SQLJET_TESTS_LOGGING>
+            <SqlJetBtreeTableTest.DELETE_COPY>true</SqlJetBtreeTableTest.DELETE_COPY>
+            <SqlJetBtreeTableTest.REPEATS_COUNT>100</SqlJetBtreeTableTest.REPEATS_COUNT>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+      </plugins>
+      </build>      
+    </profile>
+  </profiles>
+  
+  <build>
+  
+    <sourceDirectory>sqljet/src</sourceDirectory>
+    <testSourceDirectory>sqljet-test/src</testSourceDirectory>
+    <plugins>
+
+      <!--  move to parent pom -->    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+            <execution>
+            <id>attach-sources</id>
+            <goals>
+                <goal>jar</goal>
+            </goals>
+            </execution>
+        </executions>
+      </plugin>
+    
+      <!--  move to parent pom -->    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.7</version>
+        <executions>
+            <execution>
+            <id>attach-javadocs</id>
+            <goals>
+                <goal>jar</goal>
+            </goals>
+            </execution>
+        </executions>
+        <configuration>
+        <excludePackageNames>*.internal.*</excludePackageNames>
+        </configuration>
+      </plugin>
     
       <plugin>
         <groupId>org.antlr</groupId>
@@ -75,33 +197,6 @@
         </configuration>
       </plugin>
     
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>2.1.2</version>
-        <executions>
-            <execution>
-            <id>attach-sources</id>
-            <goals>
-                <goal>jar</goal>
-            </goals>
-            </execution>
-        </executions>
-    </plugin>
-    
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version>
-        <executions>
-            <execution>
-            <id>attach-javadocs</id>
-            <goals>
-                <goal>jar</goal>
-            </goals>
-            </execution>
-        </executions>
-    </plugin>
     </plugins>
   </build>
 
