--- a/.classpath
+++ b/.classpath
@@ -1,24 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="sqljet/bin" path="sqljet/src"/>
-	<classpathentry kind="src" output="sqljet-examples/simple/bin" path="sqljet-examples/simple/src"/>
-	<classpathentry kind="src" output="sqljet-examples/browser/bin" path="sqljet-examples/browser/src"/>
-	<classpathentry kind="src" output="sqljet-examples/inventory/bin" path="sqljet-examples/inventory/src"/>
-	<classpathentry kind="src" output="sqljet-examples/expenses/bin" path="sqljet-examples/expenses/src"/>
-	<classpathentry kind="src" output="sqljet-test/bin" path="sqljet-test/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
-	<classpathentry kind="lib" path="sqljet-test/lib/junit-4.5.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/home/sergey/work2/sqljet/junit/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="sqljet-test/lib/easymock.jar" sourcepath="/home/sergey/work2/sqljet/easymock/src.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/mnt/home/work/sqljet/easymock2.4/javadoc/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
-	<classpathentry kind="lib" path="sqljet-examples/browser/lib/org-netbeans-swing-outline.jar"/>
-	<classpathentry kind="lib" path="sqljet-test/lib/sqlitejdbc-v056-pure.jar"/>
-	<classpathentry kind="output" path="sqljet/bin"/>
+	<classpathentry including="**/*.java" kind="src" path="sqljet/src"/>
+	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="sqljet-test/src"/>
+	<classpathentry kind="con" path="org.eclipse.iam.jdt.core.mavenClasspathContainer"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.5.0_22"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
