--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,16 @@
             <outputDirectory>sqljet/src</outputDirectory>
         </configuration>
       </plugin>
-    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2.1</version>
+        <configuration>
+          <descriptors>
+            <descriptor>sqljet/assembly/assembly.xml</descriptor>
+          </descriptors>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
