--- a/pom.xml
+++ b/pom.xml
@@ -23,73 +23,21 @@
   <!-- move to parent pom -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <toolchain>1.5</toolchain>
   </properties>
 
   
   <profiles>
-  <!-- 
-  
-  profiles needed:
-  
-  jdk15, jdk16 (which jdk to run test with)
-  tests        (normal test suite)
-  stress-tests (another test suite)
-  benchmarks   (ant call)
-  
-   -->
-    <profile>
-      <id>jdk15</id>
-      <activation><activeByDefault>true</activeByDefault></activation>
-      <build>
-      <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-          <compilerVersion>1.5</compilerVersion>
-          <fork>true</fork>
-          <executable>${JAVA_15_HOME}/bin/javac</executable>
-        </configuration>
-      </plugin>
-      </plugins>
-      </build>      
-    </profile>
-
-    <profile>
-      <id>jdk16</id>
-      <activation><activeByDefault>false</activeByDefault></activation>
-      <build>
-      <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-          <compilerVersion>1.6</compilerVersion>
-          <fork>true</fork>
-          <executable>${JAVA_16_HOME}/bin/javac</executable>
-        </configuration>
-      </plugin>
-      </plugins>
-      </build>      
-    </profile>
-
     <profile>
       <id>sqljet.tests</id>
       <activation><activeByDefault>true</activeByDefault></activation>
       <build>
       <plugins>
       <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.8</version>
+        <version>2.6</version>
         <configuration>
-          
           <excludes>
             <exclude>**/*Abstract*.java</exclude>
             <exclude>**/*Abstract*.java</exclude>
@@ -115,9 +63,9 @@
       <build>
       <plugins>
       <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.8</version>
+        <version>2.6</version>
         <configuration>
           
           <excludes>
@@ -146,6 +94,28 @@
     <sourceDirectory>sqljet/src</sourceDirectory>
     <testSourceDirectory>sqljet-test/src</testSourceDirectory>
     <plugins>
+    
+      <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-toolchains-plugin</artifactId>
+         <version>1.0</version>
+         <executions>
+           <execution>
+             <phase>validate</phase>
+             <goals>
+               <goal>toolchain</goal>
+             </goals>
+           </execution>
+         </executions>
+         <configuration>
+           <toolchains>
+             <jdk>
+               <version>${toolchain}</version>
+               <vendor>sun</vendor>
+             </jdk>
+           </toolchains>
+         </configuration>
+      </plugin>
 
       <!--  move to parent pom -->    
       <plugin>
