Maven: inner classes should be explicitly excluded from the tests suite.
git-svn-id: http://svn.sqljet.com/repos/sqljet/trunk@1018 06c6b4df-3a75-4b2a-9d74-3e57e8079485

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <version>2.6</version>
         <configuration>
           <excludes>
+            <exclude>**/*$*</exclude>
             <exclude>**/*Abstract*.java</exclude>
             <exclude>**/*Abstract*.java</exclude>
             <exclude>**/*Mock*.java</exclude>
@@ -69,6 +70,7 @@
         <configuration>
           
           <excludes>
+            <exclude>**/*$*</exclude>
             <exclude>**/*Abstract*.java</exclude>
             <exclude>**/*Abstract*.java</exclude>
             <exclude>**/*Mock*.java</exclude>
