--- a/sqljet-examples/simple/pom.xml
+++ b/sqljet-examples/simple/pom.xml
@@ -1,5 +1,10 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	
+	<parent>
+		<artifactId>parent</artifactId>
+		<groupId>org.tmatesoft</groupId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.tmatesoft.sqljet</groupId>
 	<artifactId>sqljet-example-simple</artifactId>
