--- a/sqljet-examples/simple/pom.xml
+++ b/sqljet-examples/simple/pom.xml
@@ -10,7 +10,15 @@
 	<artifactId>sqljet-example-simple</artifactId>
 	<packaging>jar</packaging>
 	<version>1.1.0-SNAPSHOT</version>
-    
+	<organization>
+		<name>TMate Software</name>
+	</organization>
+   
+	<scm>
+      <connection>scm:svn:http://svn.sqljet.com/repos/sqljet/trunk/sqljet-examples/simple</connection>
+      <developerConnection>scm:svn:https://svn.sqljet.com/repos/sqljet/trunk/sqljet-examples/simple</developerConnection>
+    </scm>
+
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
